Fix about page section text padding on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -219,7 +219,7 @@ h6 { font-size: 1rem; }
 		text-align: center;
 	}
 	.section-text {
-		padding: 0;
+		padding: 0 !important;
 	}
 }
 
